@@ -16,27 +16,27 @@ $User->check_user_session();
 # permissions
 $User->check_module_permissions ("routing", User::ACCESS_RW, true, false);
 
-# validates
-if(!is_numeric($_POST['bgp_id']))  			{ $Result->show("danger",  _("Invalid ID"), true); }
-if(strlen($_POST['subnet'])<2)				{ $Result->show("danger",  _("Please enter at least 2 characters."), true); }
+# validate
+$bgp_id     = isset($_POST['bgp_id']) ? $_POST['bgp_id'] : '';
+$search_txt = isset($_POST['subnet']) ? $_POST['subnet'] : '';
 
-# query
-$query = 'select INET_NTOA(`subnet`) as subnet,id,mask,description from `subnets` where INET_NTOA(`subnet`) like "'.$_POST['subnet'].'%" and `subnet` > 1 and `isFolder` = 0';
-# execute
-try { $subnets = $Database->getObjectsQuery($query); }
+if(!is_numeric($bgp_id))  	{ $Result->show("danger", _("Invalid ID"), true); }
+if(strlen($search_txt) < 2)	{ $Result->show("danger", _("Please enter at least 2 characters."), true); }
+
+$query = 'SELECT INET_NTOA(`subnet`) AS `subnet`,`id`,`mask`,`description` FROM `subnets` WHERE (INET_NTOA(`subnet`) LIKE ? OR `description` LIKE ?) AND `subnet` > 1 AND `isFolder` = 0;';
+
+try { $subnets = $Database->getObjectsQuery($query, ["$search_txt%", "%$search_txt%"]); }
 catch (Exception $e) {
 	print $Result->show("danger", $e->getMessage(), true);
 }
 
 # printout
-if(sizeof($subnets)>0) {
+if (is_array($subnets) && sizeof($subnets) > 0) {
 	// remove existing
-	$bgp_mapped_subnets = $Tools->fetch_routing_subnets ("bgp", $_POST['bgp_id'], false);
+	$bgp_mapped_subnets = $Tools->fetch_routing_subnets ("bgp", $bgp_id, false) ?: [];
 	$map_arr = [];
-	if($bgp_mapped_subnets!==false) {
-		foreach ($bgp_mapped_subnets as $m) {
-			$map_arr[] = $m->subnet_id;
-		}
+	foreach ($bgp_mapped_subnets as $m) {
+		$map_arr[] = $m->subnet_id;
 	}
 
 	// print remaining
@@ -45,7 +45,7 @@ if(sizeof($subnets)>0) {
 	foreach ($subnets as $s) {
 		if (!in_array($s->id, $map_arr)) {
 			print "<tr>";
-			print "<td><btn class='btn btn-xs btn-success add_bgp_mapping' data-subnetId='$s->id' data-bgp_id='$_POST[bgp_id]' data-curr_id='$cnt'><i class='fa fa-plus'></i></btn></td>";
+			print "<td><btn class='btn btn-xs btn-success add_bgp_mapping' data-subnetId='$s->id' data-bgp_id='$bgp_id' data-curr_id='$cnt'><i class='fa fa-plus'></i></btn></td>";
 			print "<td>";
 			print "<select name='select-$cnt' class='select-$cnt form-control input-w-auto input-sm'>";
 			print "	<option value='advertised'>"._("Advertised")."</option>";
